@@ -1,6 +1,6 @@
 # GC参数
 
-## 配置
+## 参考配置
 
 ### 4G
 JAVA_OPTS="
@@ -11,6 +11,8 @@ JAVA_OPTS="
 -Xmx3g
 -XX:NewSize=1g
 -XX:MaxNewSize=2g
+-XX:PermSize=512m 
+-XX:MaxPermSize=512m 
 -XX:MaxTenuringThreshold=15
 -XX:NewRatio=2
 -XX:+AggressiveOpts
@@ -25,6 +27,58 @@ JAVA_OPTS="
 -XX:+PrintGCDetails 
 -XX:+PrintGCTimeStamps
 -Xloggc:/tmp/app-gc.log"
+
+
+## 16G
+JAVA_OPTS="
+-Dfile.encoding=UTF-8 
+-server 
+-Xms13g 
+-Xmx13g 
+-XX:NewSize=3g
+-XX:MaxNewSize=4g
+-XX:PermSize=512m 
+-XX:MaxPermSize=512m 
+-XX:MaxTenuringThreshold=10 
+-XX:NewRatio=2 
+-XX:+DisableExplicitGC"
+
+## 32G
+JAVA_OPTS="
+-Dfile.encoding=UTF-8 
+-server 
+-Xms29g
+-Xmx29g
+-XX:NewSize=6g
+-XX:MaxNewSize=8g 
+-XX:PermSize=1g
+-XX:MaxPermSize=1g
+-XX:MaxTenuringThreshold=10 
+-XX:NewRatio=2 
+-XX:+DisableExplicitGC"
+
+## 8G
+JAVA_OPTS="
+-Dfile.encoding=UTF-8 
+-server 
+-Djava.awt.headless=true 
+-Xms6g 
+-Xmx6g
+-XX:NewSize=1g 
+-XX:MaxNewSize=2g
+-XX:PermSize=512m 
+-XX:MaxPermSize=512m 
+-XX:MaxTenuringThreshold=15 
+-XX:NewRatio=2 
+-XX:+AggressiveOpts 
+-XX:+UseBiasedLocking 
+-XX:+UseConcMarkSweepGC
+-XX:+UseParNewGC
+-XX:+CMSParallelRemarkEnabled
+-XX:LargePageSizeInBytes=128m
+-XX:+UseFastAccessorMethods
+-XX:+UseCMSInitiatingOccupancyOnly
+-XX:+DisableExplicitGC"
 
 
 
